[package]
name = "channel_models"
version = "0.1.0"
edition = "2021"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
physical_constants = "0.5.0"
num = "0.4.0"
log = "0.4.17"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
rand = "0.8.5"
rand_distr = "0.4.3"
